fix logic